# updated-website

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY-VPS.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  EVENTS_PAGE_BUILDER_GUIDE.md  MENU-STRUCTURE.md  QUICK_DEPLOY.md  README_DEPLOYMENT.md  VPS-DEPLOYMENT.md  deploy-to-vps.sh  deploy.sh  docker-compose.yml  package-lock.json  package.json  reset-navigation.md  setup-vps.sh  update-navigation.js
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  check_all_settings.py  check_navigation.py  find_navigation_everywhere.py  fix_program_nav_paths.py  populate_program_page.py  populate_program_sections.py  populate_schedule.py  reset-navigation.sql  reset_navigation_to_defaults.py  show_all_navigation.py  update_db.py  update_program_nav.py  update_speaker_2.py  update_speakers.sql
backend/migrations/: 001_initial.sql  002_seed_data.sql  003_extended_schema.sql  004_seed_all_data.sql  005_seed_program_countries.sql  006_admin_users.sql  007_speaker_image_position.sql  008_hero_settings.sql  009_update_hero_title.sql  010_speaker_details.sql  011_speaker_clickable.sql  012_fix_header_title_tj.sql  013_fix_header_title_tj_v2.sql
backend/src/: auth.rs  error.rs  main.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: admin.rs  countries.rs  excursions.rs  mod.rs  navigation.rs  news.rs  partners.rs  program.rs  registration.rs  settings.rs  speakers.rs
backend/static/: index.html
backend/static/assets/: index-BC2gc978.js  index-BhA7tgwf.js  (+7 more)
(+196 files in other folders)
